--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 public class HelloWorld{
-public static void main(){
+public static void main(String[] s){
 System.out.println("Hello world!!!!");
 }
 }
